--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,155 @@
-body, h2, ul {
-    margin: 0;
-    padding: 0;
+body,
+h2,
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 header {
-    background-color: white;
-    color: black;
-    padding: 10px 0;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  background-color: white;
+  color: black;
+  padding: 10px 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.08);
+  z-index: 100;
 }
 
 nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
 }
 
 nav ul li {
-    margin: 0 15px;
+  margin: 0 15px;
 }
 
 nav ul li a {
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .featured-courses {
-    background-color: #f2f2f2;
-    padding: 20px;
-    text-align: center;
+  padding: 20px;
+  text-align: center;
+  padding-bottom: 500px;
 }
 
 .course-item {
-    background-color: white;
-    margin: 10px;
-    padding: 20px;
+  background-color: white;
+  margin: 10px;
+  display: inline-block;
+  width: calc(27% - 20px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.search-container {
+  text-align: center;
+  min-width: 300px;
+  width: 40%;
+}
+/* 
+.search-container form {
     display: inline-block;
-    width: calc(33% - 20px);
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    position: relative;
+} */
+nav .right-items{
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  float: right;
+  position: absolute;
+  right: 0px;
+}
+.search-container input[type="text"] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+  border-radius: 20px;
+}
+
+.search-container button {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #2196f3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none; /* Prevent double borders */
+  cursor: pointer;
+}
+
+.search-container::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.material-symbols-outlined {
+  display: flex;
+  float: inline-end;
+  margin-left: 3px;
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+.banner-container {
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust as necessary */
+  background-color: #ffffff; /* Or any other color you'd like for the base */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.banner-image {
+  position: absolute;
+  bottom: 0;
+  width: 70%; /* Adjust the width as needed */
+  height: 100%;
+  background-image: url("../assets/banner.jpg");
+  background-size: cover;
+  background-position: center;
+  z-index: 1;
+}
+
+.banner-image::before {
+  content: "";
+  position: absolute;
+  left: -50px; /* Overlap size */
+  top: 0;
+  width: 50px; /* Equal to the negative left value */
+  height: 100%;
+  background-color: #00aabb; /* Your chosen color for the side panel */
+  z-index: -1;
+}
+.course-item .course_img {
+  display: block;
+  transition: opacity linear 100ms;
+  width: 100%;
+  max-width: 100%;
+  height: 160px;
+}
+.course-item .bottom-div{
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: flex-start;
+  padding: 10px;
+}
+.course-item .instructer{
+  color: #aabec3;
+}
+body{
+  background-color: #d8e9ef
+}
+footer{
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  padding: 10px;
 }
