--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ nav ul {
 
 nav ul li {
   margin: 0 15px;
+  cursor: pointer;
 }
 
 nav ul li a {
@@ -133,6 +134,9 @@ nav .right-items{
   max-width: 100%;
   height: 160px;
 }
+.course-item :hover{
+  cursor: pointer;
+}
 .course-item .bottom-div{
   
   display: flex;
@@ -153,6 +157,8 @@ footer{
   font-weight: bold;
   padding: 10px;
 }
+
+/* Login Page CSS starts */
 
 
 .login-container {
@@ -191,4 +197,104 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+/* Course page CSS starts */
+.outer-div {
+  display: flex;
+  flex: 1;
+}
+.course-page{
+  flex: 0.8;
+}
+.course-page .video{
+
+}
+.sidebar{
+  background-color: #f1f1f1;
+  min-height: max-content;
+  flex: 0.2;
+
+}
+.course-page .dashboard{
+  padding-bottom: 500px;
+  background-color: white;
+}
+.video-wrapper .video-controller{
+  width: 100%;
+}
+.sidebar .top-banner{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  font-weight: bold;
+  border: 1px solid #d1d7dc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+/* Style the accordion and the panels */
+.accordion {
+  background-color: white;
+  /* border-left: 3px solid grey; */
+}
+
+.accordion-item {
+  border-bottom: 1px solid #ddd;
+  background-color: #f1f1f1;
+}
+
+.accordion-item .accordion-button {
+  background-color: #f1f1f1;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  font-size: 16px;
+  /* display: flex;
+  justify-content: space-between; */
+}
+
+.accordion-item .accordion-button .title{
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS on click) */
+.accordion-item .accordion-button.active, .accordion-button:hover {
+  background-color: #f1f1f1;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+/* Style the content inside the panel */
+.panel p {
+  margin: 18px 0;
+  font-size: 14px;
+  color: #555;
+}
+.dashboard .top-bar{
+  display: flex;
+  border-bottom: 1px solid white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 10px
+
+}
+.dashboard .top-bar p{
+  margin: 0px;
+  margin-left: 30px;
+  color: #a2a7ab;
+  
+}
+.dashboard .top-bar p:hover{
+  cursor: pointer;
 }
