--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,39 @@ nav ul li a {
   text-align: center;
   padding-bottom: 500px;
 }
-
+#userid {
+  display: flex;
+}
+.course-item .bottom-div .title {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.course-item .bottom-div .dropdown{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.course-item .price-div{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.course-item .price-div .go-to-course{
+  background-color: #a435f0;
+  font-weight: bold;
+  text-decoration: white;
+  width: 150px;
+  height: 40px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
 .course-item {
   background-color: white;
   margin: 10px;
   display: inline-block;
   width: calc(27% - 20px);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 .search-container {
   text-align: center;
